--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Lightning Project</h1>
 		</header>
 			<section id="content">
 				<canvas id="Lightning" data-processing-sources="Lightning.pde">
@@ -16,7 +16,6 @@
 		    </section>
 	    <footer>
 		    Press the Mouse
-		    Ethan Weir
 	    </footer>
 	</body>
 </html>
